--- a/app/assets/stylesheets/partials/_parts.scss
+++ b/app/assets/stylesheets/partials/_parts.scss
@@ -45,5 +45,14 @@ div.flash.alert{
 //----- #footer ------
 #footer{
   min-height: 300px;
-  background-color: $content_block_color;
+  margin-top: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+//  border-top: 1px solid $font_light;
+  box-shadow: 0px -5px 3px 0px $font_dark;
+
+  .footer_cell{
+    background-color: $content_block_color;
+    color: $font_light;
+  }
 }
