--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-4"></div><!-- col -->
     <div class="col-md-4">
-      <div class="content_block well">
+      <div class="content_block">
 
         <h3>Edit <%= resource_name.to_s.humanize %></h3>
 
