--- a/app/views/djs/show.html.erb
+++ b/app/views/djs/show.html.erb
@@ -11,6 +11,10 @@
   </div>
 </h1>
 
+<div>
+  <%= render :partial => 'parts/social_networking/share_on_social_networking' %>
+</div>
+
 <div id="dj" class="article">
   <div class="article_content">
     <%= link_to @dj.head_shot.url, target: '_blank' do -%>
