--- a/app/assets/stylesheets/partials/_parts.scss
+++ b/app/assets/stylesheets/partials/_parts.scss
@@ -29,22 +29,27 @@
 
 //------ The Flash ----
 .flash {
-  padding-top: 5px;
+  @extend .content_block;
+  padding: 5px;
+  padding-bottom: 15px;
+
+  font-size: 28px;
+  text-align: center;
+  color: $bright_accent;
+  font-weight: 600;
+
+  .close{
+    color: $font_light;
+    text-shadow: 1px 1px $font_medium;
+  }
 }
 
-div.flash.notice{
-  background-color: rgba($alert-warning-bg, .90);
-}
 
-div.flash.alert{
-  background-color: rgba($alert-danger-bg, .90);
-}
 
 //------ #the_flash -----
 
 //----- #footer ------
 #footer{
-  min-height: 300px;
   margin-top: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -52,6 +57,9 @@ div.flash.alert{
   background-color: $content_block_color;
 
   box-shadow: 0px -5px 3px 0px $font_dark;
+
+  .container{
+  }
 
   .footer_cell{
     color: $font_light;
