--- a/app/assets/stylesheets/partials/_widgets.scss
+++ b/app/assets/stylesheets/partials/_widgets.scss
@@ -1,7 +1,9 @@
 /*------------------------------------------------------
 - #on_the_web_widget
+- .facebook_comments
 ------------------------------------------------------*/
 
+//--------- #on_the_web_widget
 #on_the_web_widget{
   margin-top: 10px;
 
@@ -17,4 +19,12 @@
     padding-bottom: 10px;
     margin-bottom: 10px;
   }
+}
+
+//--------------- #.facebook_comments ---
+.facebook_comments{
+  border-radius: 10px;
+  border: 10px solid $content_block_color;
+  margin-top: 20px;
+  background-color: $font_medium_light;
 }
