--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,24 @@
-<h2>Resend unlock instructions</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4"></div><!-- col -->
+    <div class="col-md-4">
+      <h3>Resend unlock instructions</h3>
 
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+      <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+        <div class="form-group">
+          <%= f.label :email, class: 'control-label' %>
+          <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+        </div>
 
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
-  </div>
-<% end %>
+        <div class="form-group">
+          <%= f.submit "Resend unlock instructions", class: 'form-control' %>
+        </div>
+      <% end %>
 
-<%= render "devise/shared/links" %>
+      <%= render "devise/shared/links" %>
+    </div><!-- col -->
+    <div class="col-md-4"></div><!-- col -->
+  </div><!-- row -->
+</div>
