--- a/app/views/parts/_the_flash.html.erb
+++ b/app/views/parts/_the_flash.html.erb
@@ -8,7 +8,7 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <h4><%= alert %></h4>
+        <%= alert %>
       </div>
     </div>
   </div>
@@ -24,7 +24,7 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <h4><%= notice %></h4>
+        <%= notice %>
       </div>
     </div>
   </div>
