--- a/app/views/parts/_footer.html.erb
+++ b/app/views/parts/_footer.html.erb
@@ -37,8 +37,12 @@
       </div><!-- col -->
     </div><!-- row -->
   </div>
+
 </div>
 
+<div class="footer_foot dcontainer-fluid">
+  <%#= image_tag 'parts/fm_bottom.png' %>
+</div>
 <script>
   doReadyMethods();
 </script>
