--- a/app/assets/stylesheets/partials/_parts.scss
+++ b/app/assets/stylesheets/partials/_parts.scss
@@ -65,3 +65,10 @@
     color: $font_light;
   }
 }
+.footer_foot{
+  height: 100px;
+  background-image: image-url('parts/fm_bottom.png');
+  position: relative;
+  top: -130px;
+  z-index: -100;
+}
