--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -7,7 +7,9 @@
 //---- Font Imports-----
 @import url('http://fonts.googleapis.com/css?family=Play');
 @import url('http://fonts.googleapis.com/css?family=Open+Sans');
-
+//@import url(http://fonts.googleapis.com/css?family=Orbitron);
+//@import url(http://fonts.googleapis.com/css?family=PT+Sans+Narrow);
+//@import url(http://fonts.googleapis.com/css?family=Jura);
 //----- Classes
 @mixin title_font{
   font-weight: 600;
