--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
 <h3>Stories and news</h3>
 <%= render partial: 'news_stories/list' %>
+<h5><%= link_to 'more stories >>', news_stories_path, class: 'pull-right' %></h5>
+
 
 
 
