--- a/app/assets/stylesheets/partials/_image_gallery.scss
+++ b/app/assets/stylesheets/partials/_image_gallery.scss
@@ -1,11 +1,14 @@
 #gallery{
-  background-color: $content_block_color;
+//  background-color: $content_block_color;
 
   .gallery_image_container{
     padding: 5px;
+    display: inline-block;
+    margin: 10px;
+    //    margin: 10px;
 
     img{
-      width: 100%;
+//      width: 100%;
 
       -webkit-border-top-left-radius: 5px;
       -webkit-border-top-right-radius: 5px;
