--- a/app/views/parts/_footer.html.erb
+++ b/app/views/parts/_footer.html.erb
@@ -43,6 +43,6 @@
 <div class="footer_foot dcontainer-fluid">
   <%#= image_tag 'parts/fm_bottom.png' %>
 </div>
-<script>
-  doReadyMethods();
-</script>
+<!--<script>-->
+  <!--doReadyMethods();-->
+<!--</script>-->
