--- a/app/views/parts/_footer.html.erb
+++ b/app/views/parts/_footer.html.erb
@@ -29,7 +29,7 @@
         </address>
       </div><!-- col -->
       <div class="col-sm-4 footer_cell middle"></div><!-- col -->
-      <div class="col-sm-4 footer_cell last" style="padding-top: 160px;">
+      <div class="col-sm-4 footer_cell last" style="padding-top: 120px;">
         Web design by &nbsp;
         <%= link_to 'http://anysoft.us', target: '_blank' do %>
           <%= image_tag 'logos/vendor/anysoft.png', height: '50px' %>
@@ -40,9 +40,9 @@
 
 </div>
 
-<div class="footer_foot dcontainer-fluid">
+<!--<div class="footer_foot container-fluid">-->
   <%#= image_tag 'parts/fm_bottom.png' %>
-</div>
+<!--</div>-->
 <!--<script>-->
   <!--doReadyMethods();-->
 <!--</script>-->
