--- a/app/assets/stylesheets/partials/_parts.scss
+++ b/app/assets/stylesheets/partials/_parts.scss
@@ -64,11 +64,15 @@
   .footer_cell{
     color: $font_light;
   }
-}
-.footer_foot{
-  height: 100px;
+
   background-image: image-url('parts/fm_bottom.png');
-  position: relative;
-  top: -130px;
-  z-index: -100;
+  background-position: bottom;
+  background-repeat: no-repeat;
 }
+//.footer_foot{
+//  height: 100px;
+//  background-image:
+//  position: relative;
+//  top: -130px;
+//  z-index: -100;
+//}
