--- a/app/views/parts/_footer.html.erb
+++ b/app/views/parts/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-4 footer_cell first">
         <div class="social_networking_link">
-          <%= mail_to 'office@killergreenradio.com', target: '_blank'  do %>
+          <%= mail_to 'office@killergreenradio.com' do %>
             <%= image_tag 'social_networking/small_mail.png' %> Email
           <% end %>
         </div>
