--- a/app/views/djs/_form.html.erb
+++ b/app/views/djs/_form.html.erb
@@ -102,7 +102,8 @@
       <div class="form-group">
         <%= f.submit class: 'btn btn-primary' %>
 
-        <%= link_to 'Delete', @dj, method: :delete, class: 'btn btn-danger' unless @dj.new_record? %>
+        <%= link_to 'Delete', @dj, method: :delete, class: 'btn btn-danger',
+                    :data => {:confirm => 'Are you sure? This is permanent'} unless @dj.new_record? %>
       </div>
     </div><!-- col -->
   </div><!-- row -->
