--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -91,6 +91,8 @@
     <div class="col-sm-12">
       <div class="form-group">
         <%= f.submit class: 'btn btn-primary' %>
+        <%= link_to 'Delete', @event, method: :delete, class: 'btn btn-danger',
+                    :data => {:confirm => 'Are you sure? This is permanent'} unless @event.new_record? %>
       </div>
     </div>
   </div>
