--- a/app/views/news_stories/edit.html.erb
+++ b/app/views/news_stories/edit.html.erb
@@ -1,4 +1,5 @@
 <div id="edit_news_story" class="content_block container">
-  <h1>Edit <%= link_to @news_story.title, @news_story %></h1>
+  <h1>Edit <%= link_to @news_story.title, @news_story %>
+  </h1>
   <%= render :partial => 'news_stories/form' %>
 </div>
