--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -6,7 +6,17 @@
   </div>
 
   <div class="row">
+    <div class="col-md-12">
+      <div id="publication_status" class="form-group">
+        Status: <strong><%= @event.publication_status %></strong>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
     <div class="col-sm-4">
+
+
       <div class="form-group">
         <%= f.label :name, class: 'control-label' %>
         <%= f.text_field :name, class: 'form-control' %>
@@ -60,15 +70,9 @@
     <div class="col-sm-4">
       <div class="form_group">
         <h4>DJs Attending</h4>
-        <% @djs.each_with_index do |dj, i| -%>
-          <div class="checkbox">
-            <label for="event_djs_attending_<%= i %>">
-              <%= check_box_tag "event[djs_attending][]", dj.to_param, (:checked if @event.djs_attending.include?(dj.to_param)),
-                                                          :id => "event_djs_attending_#{i}"%>
-              <%= dj.name %>
-            </label>
-          </div>
-        <% end -%>
+        <div class="checkbox_container">
+          <%= collection_check_boxes :event, :user_ids, Dj.all, :user_id, :name %>
+        </div>
       </div>
     </div><!-- col -->
 
@@ -79,25 +83,18 @@
         <%= f.text_field :facebook_event_link, class: 'form-control' %>
       </div>
     </div><!-- col -->
-
-
-
-
-
   </div><!-- row -->
-
 
   <div class="row">
     <div class="col-sm-12">
       <div class="form-group">
-        <%= f.submit class: 'btn btn-primary' %>
-        <%= link_to 'Delete', @event, method: :delete, class: 'btn btn-danger',
-                    :data => {:confirm => 'Are you sure? This is permanent'} unless @event.new_record? %>
+        <%= sdad_button_row(@event, f) %>
+
       </div>
     </div>
   </div>
 <% end %>
 
 <script>
-  $('.datetimepicker').datetimepicker();
+//  $('.datetimepicker').datetimepicker();
 </script>
