--- a/app/views/djs/edit.html.erb
+++ b/app/views/djs/edit.html.erb
@@ -1,4 +1,4 @@
-<div id="edit_dj" class="content_block container">
+<div id="edit_dj" class="content_block">
   <h1>Edit <%= link_to @dj.name, @dj %></h1>
   <%= render 'form' %>
 </div>
