--- a/app/views/shows/_form.html.erb
+++ b/app/views/shows/_form.html.erb
@@ -1,13 +1,54 @@
-<%= form_builder.fields_for :show do |show_fields| %>
-  <div class="form-group">
-    <%= show_fields.label :name, 'Name', class: 'control-label' %>
-    <%= show_fields.text_field :name, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <div class="form-group">
-      <%= show_fields.label :description, class: 'control-label' %>
-      <%= show_fields.bootsy_area :description, class: 'form-control' %>
+<%= form_for @show do |f| %>
+  <div class="row">
+    <div class="col-sm-12">
+      <%= error_explanation @show %>
     </div>
   </div>
-  <!--<div class="form-group"></div>-->
+
+  <div class="row">
+    <div class="col-md-12">
+      <div id="publication_status" class="form-group">
+        Status: <strong><%= @show.publication_status %></strong>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <div class="form-group">
+        <%= f.label :name, 'Name', class: 'control-label' %>
+        <%= f.text_field :name, class: 'form-control' %>
+      </div>
+    </div><!-- col -->
+  </div><!-- row -->
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="form-group">
+        <%= f.label :description, class: 'control-label' %>
+        <%= f.bootsy_area :description, class: 'form-control' %>
+      </div>
+    </div><!-- col -->
+  </div><!-- row -->
+
+  <%= image_select f, :main_image %><!-- row -->
+
+  <%= image_select f, :slider_image %><!-- row -->
+
+  <div class="row">
+    <div class="col-md-4">
+      <h4>Show Djs</h4>
+      <div class="checkbox_container">
+        <%= collection_check_boxes :show, :user_ids, Dj.all, :user_id, :name %>
+      </div>
+    </div><!-- col -->
+  </div><!-- row -->
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="form-group">
+        <%= sdad_button_row(@show, f) %>
+      </div>
+    </div>
+  </div>
 <% end %>
