--- a/app/assets/stylesheets/partials/_parts.scss
+++ b/app/assets/stylesheets/partials/_parts.scss
@@ -32,6 +32,7 @@
   @extend .content_block;
   padding: 5px;
   padding-bottom: 15px;
+  margin-bottom: 20px;
 
   font-size: 28px;
   text-align: center;
