--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,13 @@
 <body>
   <%= render partial: 'parts/top_nav' %>
 
+  <div class="banner_ad container-fluid">
+    <div class="slug text-center">
+      Buy some advertising space here!!!!
+    </div>
+
+  </div>
+
   <%= render partial: 'parts/header' %>
   <%= render partial: 'parts/the_flash' %>
 
