--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= render partial: 'parts/top_nav' %>
 
   <div class="banner_ad container-fluid">
-    <div class="slug text-center">
+    <div class="ad_slug text-center">
       Buy some advertising space here!!!!
     </div>
 
