--- a/app/assets/stylesheets/partials/ads.scss
+++ b/app/assets/stylesheets/partials/ads.scss
@@ -1,7 +1,10 @@
 @import url(http://fonts.googleapis.com/css?family=Press+Start+2P);
 
 .banner_ad{
-  .slug{
+
+}
+
+.ad_slug{
     border-top: 2px solid green;
     border-bottom: 2px solid green;
     background-color: black;
@@ -10,9 +13,6 @@
     font-size: 24px;
     padding-top: 5px;
     padding-bottom: 5px;
-
     margin-top: 10px;
     margin-bottom: 10px;
-
-  }
- }
+}
