--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
       </div><!-- main_content -->
 
       <div class="col-md-4" id="side_content">
+        <div class="ad_slug text-center">
+          Buy some advertising space here!!!!
+        </div>
         <%= content_for :side_bar %>
       </div><!-- side_content -->
     </div><!-- content row -->
