--- a/app/views/djs/index.html.erb
+++ b/app/views/djs/index.html.erb
@@ -47,7 +47,7 @@
   <% end %><!-- groups -->
 </div>
 
-<% content_for :side_bar do %>
+<% content_for :right_side_2 do %>
   <%= render :partial => 'events/embedded_monthly' %>
 <% end %>
 
