--- a/app/views/djs/show.html.erb
+++ b/app/views/djs/show.html.erb
@@ -40,7 +40,7 @@
   </div>
 </div>
 
-<% content_for :side_bar do %>
+<% content_for :right_side_2 do %>
   <%= render :partial => 'events/embedded_monthly' if @dj.user.events.count > 0 %>
 <% end %>
 
