--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -7,7 +7,7 @@
 
 </div>
 
-<% content_for :side_bar do %>
+<% content_for :right_side_2 do %>
   <%= render :partial => 'events/embedded_monthly' %>
 <% end %>
 
