--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -43,7 +43,7 @@
   </div>
 </div>
 
-<% content_for :side_bar do %>
+<% content_for :right_side_2 do %>
   <h4>Show Djs</h4>
   <%= render partial: 'djs/list', locals: {djs: @show.djs} %>
 <% end %>
