--- a/app/views/news_stories/index.html.erb
+++ b/app/views/news_stories/index.html.erb
@@ -8,7 +8,7 @@
   <!--</div>-->
 </div>
 
-<% content_for :side_bar do %>
+<% content_for :right_side_2 do %>
   <%= render :partial => 'events/embedded_monthly' %>
 <% end %>
 
