--- a/app/assets/stylesheets/modules/_colors.scss
+++ b/app/assets/stylesheets/modules/_colors.scss
@@ -11,3 +11,5 @@ $content_block_color: rgba($font_dark, .70);
 $contrast_block_color: rgba(black, .50);
 
 $bright_accent: #db2754;
+
+$main_bg_color: #7a8f74;
