--- a/app/assets/stylesheets/partials/_globals.scss
+++ b/app/assets/stylesheets/partials/_globals.scss
@@ -13,7 +13,7 @@ body{
   background-image: image-url('backgrounds/mj_pills_bg.jpg');
   background-color: $main_bg_color;
   background-position: top;
-  background-repeat: no-repeat;
+//  background-repeat: no-repeat;
 }
 
 //-------- .content_block ----
